--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media screen and (min-width: 600px) {
+  .container {
+    padding-top: 50px;
+    width: 600px !important;
+  }
+}
+
+.box {
+  display: flex !important;
+  align-items: center;
+}
+
+.song-title {
+  margin-left: 20px;
+}
+
+.controls {
+  display: flex !important;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.controls .button {
+  margin: 5px;
+}
+
+.current-track {
+  width: 80%;
+}
+
+.myprogress {
+  display: flex !important;
+  flex-direction: row;
+  margin-top: 10px;
+  width: 80%;
+}
+
+.myprogress span {
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: -5px;
+}
+
+@keyframes slide {
+  0% {
+    transform: translatex(0%)
+  }
+
+  100% {
+    transform: translatex(100%)
+  }
 }
