Updated TrackList component using Bulma for styling with Panel/Column.

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@ code {
   width: 80%;
 }
 
+.trackBox {
+  display: flex !important;
+  flex-direction: column;
+  max-height: 300px;
+  overflow-y: auto;
+}
 .myprogress {
   display: flex !important;
   flex-direction: row;
